# light

./: .gitignore  Cargo.toml  README.md  light
bench/: Cargo.toml
bench/src/: main.rs
benches/: benchmark.rs
ilios/: Cargo.toml
ilios-display/: Cargo.toml
ilios-types/: Cargo.toml
ilios-wasm/: Cargo.toml  build.sh
ilios-wasm/src/: lib.rs
ilios/src/: demos.rs  (+6 more)
include/: vector3.h
kosmos/: Cargo.toml
kosmos/src/: config_loader.rs  config_types.rs  lib.rs
kosmos/src/loaders/: file_loader.rs  mod.rs  zip_loader.rs
kosmos/src/parsers/: json.rs  mod.rs  ply.rs
light/: Cargo.toml
light-types/: Cargo.toml
light-wasm/: Cargo.toml
light/src/: demos.rs  lib.rs  light.rs
light/src/ilios/: bounding_box.rs  camera.rs  closest_primitive.rs  color.rs  float.rs  generic_vector.rs  light_source.rs  material.rs  mod.rs  normal.rs  point.rs  ray.rs  render_method.rs  renderer.rs  rng.rs  simd.rs  trace.rs  transform.rs  vector.rs  world.rs
light/src/ilios/accelerators/: bounding_volume_hierarchy.rs  brute_force.rs  mod.rs
light/src/ilios/algorithms/: mod.rs  path_tracing.rs  whitted.rs
light/src/ilios/geometry/: axis.rs  generic_vector.rs  mod.rs  normal.rs  packed_triangles.rs  point.rs  triangle.rs  vector.rs
light/src/ilios/parsers/: json.rs  mod.rs
light/src/ilios/primitives/: mod.rs
light/src/ilios/simd/: mod.rs  reference.rs  wasm32.rs
light/src/ilios/solids/: mod.rs
light/src/ilios/traits/: intersectable.rs
light/src/light/: acc_struct.rs  acc_structure.rs  accelerator.rs  bounding_box.rs  bounding_volume_hierarchy.rs  brute_force.rs  camera.rs  color.rs  demos.rs  direct_illumination.rs  float.rs  generic_vector.rs  global_illumination.rs  light.rs  light_source.rs  material.rs  mod.rs  normal.rs  path_tracing.rs  pixel.rs  point.rs  primitive.rs  ray.rs  renderer.rs  scanline.rs  section.rs  solid.rs  solids.rs  tile.rs  trace.rs  transform.rs  vector.rs  whitted.rs  world.rs
linux/: .depend  light  makefile  makefile.gui
macosx/: .depend  light  makefile  makefile.gui  run_gui.sh
models/: bunny_res2.mtl  sphere.dae
nim/: light.nim  light.nimble  material.nim  nimrb.nim  ray.nim  world.nim
photon/: Cargo.toml  run-dev.sh  run-pi.sh  run-png-flamegraph.sh  run-png-ply.sh  run-png-scene.sh  run-png-simple.sh  run-png.sh  run-stats.sh  run.sh  scene-simple.json  scene.json  torus.json
photon/src/: main.rs
prism/: index.html  package-lock.json  package.json
sample-scene/: camera.json  scene.json
screen/: Cargo.toml
screen/src/: main.rs
src/: .camera.c.swp  .depend  .main.c.swp  .makefile.swp  .render.c.swp  .render.h.swp  .timer.c.swp  .timer.h.swp  aabb.c  aabb.h  almalloc.h  arrow.h  bvh.c  bvh.h  camera.c  camera.h  color.c  color.h  color.rs  debug.c  debug.h  how.nim  includes.h  intersection.h  job.c  job.h  lib.rs  light  light.c  light.nim  light.nim.cfg  light.rs  list.c  list.h  main.c  main.rs  main_gui.c  makefile  makefile.gui  material.c  (+33 more)
(+134 files in other folders)
