[package]
name = "bench"
version = "0.1.0"
authors = ["Enrique <niofis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
split-debuginfo = "unpacked"

[dependencies]
clap = "3.2"
time = "0.3"
ilios = { path = "../ilios" }
num_cpus = "1"

[profile.release]
debug = true
