[package]
name = "bench"
version = "0.1.0"
authors = ["Enrique <niofis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
split-debuginfo = "unpacked"

[dependencies]
clap = "4.4"
time = "0.3"
light = { path = "../light" }
num_cpus = "1"

[profile.release]
debug = true
