[package]
name = "ilios-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ilios = { path = "../ilios" }
ilios-types = { path = "../ilios-types" }
kosmos = { path = "../kosmos" }

[profile.release]
strip = true
