[package]
name = "light"
version = "0.1.0"
authors = ["Enrique <niofis@gmail.com>"]
edition = "2018"

[dev-dependencies]
criterion = "0.2"

[dependencies]
clap = "2"
time = "0.1.42"
rayon = "1.2"
tobj = "1.0.0"

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["gfx"]

[[bench]]
name = "benchmark"
harness = false
