[package]
name = "screen"
version = "0.1.0"
authors = ["Enrique <niofis@gmail.com>"]
edition = "2018"

[profile.dev]
split-debuginfo = "unpacked"

[dependencies]
clap = "2"
time = "0.1.42"
light = { path = "../light" }

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["gfx"]
